attached_assets/Pasted-Info-Looking-up-installed-tauri-packages-to-check-misma_1781258316320.txt
Info Looking up installed tauri packages to check mismatched versions...
        Warn The bundle identifier "com.easydemocs2.app" set in `"tauri.conf.json" identifier` ends with `.app`. This is not recommended because it conflicts with the application bundle extension on macOS.
     Running beforeBuildCommand `pnpm run build`

> @workspace/demo-manager@0.0.0 build D:\a\Faceit_esayDemo\Faceit_esayDemo\artifacts\demo-manager
> vite build --config vite.config.ts

vite v7.3.3 building client environment for production...
transforming...
Found 1 warning while optimizing generated CSS:

│   initial-value: 0;
│ }
│ @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap');
┆        ^-- @import rules must precede all rules aside from @charset and @layer statements
┆
│ :root {
│   --background: 240 10% 4%;

src/components/ui/tooltip.tsx (2:0): Error when using sourcemap for reporting an error: Can't resolve original location of error.
✓ 2156 modules transformed.
rendering chunks...
computing gzip size...
dist/public/index.html                   1.45 kB │ gzip:   0.56 kB
dist/public/assets/index-Dyjye7hZ.css  101.79 kB │ gzip:  16.43 kB
dist/public/assets/core-DV6XEvTN.js      0.10 kB │ gzip:   0.11 kB
dist/public/assets/index-CLtik8e8.js     1.26 kB │ gzip:   0.49 kB
dist/public/assets/index-B5SO8jIg.js   418.71 kB │ gzip: 131.93 kB
✓ built in 5.79s
 Downloading crates ...
  Downloaded time-core v0.1.9
  Downloaded time-macros v0.2.28
  Downloaded memchr v2.8.2
  Downloaded time v0.3.48
   Compiling memchr v2.8.2
   Compiling time-core v0.1.9
   Compiling deranged v0.5.8
   Compiling time v0.3.48
   Compiling time-macros v0.2.28
   Compiling serde_json v1.0.150
   Compiling aho-corasick v1.1.4
   Compiling quick-xml v0.39.4
   Compiling jsonptr v0.6.3
   Compiling plist v1.9.0
   Compiling regex-automata v0.4.14
   Compiling json-patch v3.0.1
   Compiling cargo_metadata v0.19.2
   Compiling schemars v0.8.22
   Compiling regex v1.12.4
   Compiling urlpattern v0.3.0
   Compiling tauri-utils v2.9.2
error[E0119]: conflicting implementations of trait `From<time::format_description::parse::format_item::HourBase>` for type `<time::format_description::parse::format_item::HourBase as time::format_description::parse::format_item::ModifierValue>::Type`
   --> C:\Users\runneradmin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-utils-2.9.2\src\acl\value.rs:117:1
    |
117 | impl<T: Into<Number>> From<T> for Value {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: conflicting implementation in crate `time`:
            - impl From<time::format_description::parse::format_item::HourBase> for <time::format_description::parse::format_item::HourBase as time::format_description::parse::format_item::ModifierValue>::Type;

error[E0119]: conflicting implementations of trait `From<time::format_description::parse::format_item::HourBase>` for type `<time::format_description::parse::format_item::HourBase as time::format_description::parse::format_item::ModifierValue>::Type`
  --> C:\Users\runneradmin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-utils-2.9.2\src\assets.rs:44:1
   |
44 | impl<P: AsRef<Path>> From<P> for AssetKey {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `time`:
           - impl From<time::format_description::parse::format_item::HourBase> for <time::format_description::parse::format_item::HourBase as time::format_description::parse::format_item::ModifierValue>::Type;
   = note: upstream crates may add a new impl of trait `std::convert::AsRef<std::path::Path>` for type `time::format_description::parse::format_item::HourBase` in future versions

For more information about this error, try `rustc --explain E0119`.
error: could not compile `tauri-utils` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
failed to build app: failed to build app
       Error failed to build app: failed to build app
Error: Process completed with exit code 1.